apps/desktop/src-tauri/src/prompts/snapshots/testing_ide_lib__prompts__snapshots__context_md_v1_messages.snap
---
source: src/prompts/snapshots.rs
expression: dump_messages(&msgs)
---
- role: system
  text: "You are a senior software architect summarizing a codebase for downstream test-strategy generation. Read the supplied chunks and produce a structured overview.\n\nRules:\n- Cite specific files / functions / classes by name when describing architecture. Do NOT invent symbols that do not appear in the chunks.\n- Distinguish what the code OBVIOUSLY does from what you are INFERRING.\n- Flag uncertainty explicitly — write 'unclear from sampled chunks' rather than guessing.\n- Output is consumed by other LLM prompts, so prefer stable noun-phrase references over narrative paragraphs.\n- Always invoke the `emit_project_context` tool with the structured payload. Never reply with free-form prose."
- role: user
  text: "# Project: fixture-project\n\nScope hint: auth module\n\n## Sampled chunks\n\n--- chunk 1 | function `login` (lines 10–25) ---\nfunction login(creds) { return verify(creds); }\n\n\n--- chunk 2 | class `SessionStore` (lines 30–60) ---\nclass SessionStore { /* ... */ }\n\n\n\n\nNow invoke `emit_project_context` with the structured summary."
