apps/desktop/src-tauri/src/prompts/snapshots/testing_ide_lib__prompts__snapshots__runnable_files_v1_messages.snap
---
source: src/prompts/snapshots.rs
expression: dump_messages(&msgs)
---
- role: system
  text: "You are a senior test engineer. You are given an existing set of structured test cases and the source code they cover. Your ONLY job is to emit the runnable workspace that makes those cases executable in a local vitest sandbox.\n\nRules:\n- Emit a `files` array containing the minimal source-under-test file(s), reproduced faithfully from the supplied chunks and marked `isTest: false`, plus one vitest spec per source file marked `isTest: true`.\n- Each spec uses `import { describe, it, expect } from 'vitest'` and imports the source by relative path. One `it(...)` per test case where practical, asserting that case's expected results.\n- Use workspace-relative paths only — never an absolute path or a `..` segment.\n- Do NOT restate, modify, or re-emit the test cases themselves. Only the `files` array.\n- Always invoke the `emit_runnable_files` tool with the structured payload. Never reply with free-form prose."
- role: user
  text: "# Project: fixture-project\n\nScope: auth module\n\n## Existing test cases (already final — do not change)\n\n[{\"id\":\"TC-LOGIN-SUCCESS\",\"title\":\"login succeeds with valid creds\"}]\n\n## Source code under test\n\n--- chunk 1 | function `login` (lines 10–25) ---\nfunction login(creds) { return verify(creds); }\n\n\n--- chunk 2 | class `SessionStore` (lines 30–60) ---\nclass SessionStore { /* ... */ }\n\n\n\n\n[CRITICAL INSTRUCTION] You MUST now invoke the `emit_runnable_files` tool. The JSON payload MUST use ONLY the top-level key `files` (required, at least one entry):\n{\n\"files\": [\n{ \"path\": \"src/add.ts\", \"contents\": \"...\", \"isTest\": false },\n{ \"path\": \"add.test.ts\", \"contents\": \"...\", \"isTest\": true }\n]\n}\nReproduce the source-under-test from the chunks above (isTest:false) and write one vitest spec per source file (isTest:true) covering the supplied cases. Use workspace-relative paths only (no absolute paths, no `..`). Do NOT reply with free-form prose, apologies, or explanations. You MUST invoke the tool."
