apps/desktop/src-tauri/src/prompts/snapshots/testing_ide_lib__prompts__snapshots__test_cases_v1_messages.snap
---
source: src/prompts/snapshots.rs
expression: dump_messages(&msgs)
---
- role: system
  text: "You are a senior test engineer writing concrete, executable test cases for the supplied scope. Each case must trace back to specific code (file + function/method/class).\n\nRules:\n- Bind every test case to a symbol that appears in the supplied chunks. If the symbol is not visible, do NOT generate a case for it.\n- Cover positive, negative, boundary, and error paths — but only when each applies to the bound symbol's behavior.\n- Steps are imperative and ordered. Expected results are observable, not internal state assertions the test runner cannot reach.\n- Priority must follow impact * likelihood, not test difficulty.\n- Always invoke the `emit_test_cases` tool with the structured payload. Never reply with free-form prose."
- role: user
  text: "# Project: fixture-project\n\nScope: auth module\n\n## Project context\n\nFixture summary used for snapshot tests.\n\n## Code to cover\n\n--- chunk 1 | function `login` (lines 10–25) ---\nfunction login(creds) { return verify(creds); }\n\n\n--- chunk 2 | class `SessionStore` (lines 30–60) ---\nclass SessionStore { /* ... */ }\n\n\n\n\nNow invoke `emit_test_cases` with the structured cases."
